--- a/templates/sidebar-module/post_feed.twig
+++ b/templates/sidebar-module/post_feed.twig
@@ -1,42 +1,51 @@
 {% set post_type = module.post_type %}
+{% set category = module.category %}
+
 <div class="sidebar-post-feed sidebar-post-feed-{{post_type}}">
 
-    {% set category = TimberTerm(module.category) %}
-
-    {% set args = {
-        'numberposts' : module.max,
-    } %}
-
     {% if post_type == 'events' %}
-        {% set args = args|merge({
-            'meta_key' : '_EventStartDateUTC',
-            'orderby' : 'meta_value',
-            'order' : 'ASC',
-        }) %}
+
+        {% set args = {
+            'posts_per_page' : module.max,
+            'start_date' : now|date("Y-m-d H:i:s"),
+            'tax_query' : {
+                    'taxonomy' : 'tribe_events_cat',
+                    'field' : 'slug',
+                    'terms' : category,
+            }
+        } %}
+
+        {% set items = function('tribe_get_events', args) %}
+
     {% else %}
-        {% set args = args|merge({
+
+        {% set category = TimberTerm(module.category) %}
+
+        {% set args = {
+            'numberposts' : module.max,
             'order' : 'DESC',
-        }) %}
+        } %}
+
+        {% set items = category.get_posts(args) %}
     {% endif %}
 
     {% set events %}
-        {% for item in category.get_posts(args) %}
+
+        {% for item in items %}
+            
             <div class="sidebar-post-feed-event">
-                <!--
-                {{item|print_r}}
-                -->
                 {% set event_start_date = item._EventStartDate|date("F d") %}
                 {% set event_start_time = item._EventStartDate|date("g:i a") %}
                 {% set event_end_time = item._EventEndDate|date("g:i a") %}
-                {% set event_date = event_start_date %}
+                {% set event_date = event_start_date~', '~event_start_time~'&ndash;'~event_end_time %}
                 <span class="sidebar-post-feed-event-date">{{event_date}}</span>
-                <h4><a href="{{item.link}}">{{item.name}}</a></h4>
+                <h4><a href="{{item.guid}}">{{item.post_title}}</a></h4>
             </div>
         {% endfor %}
     {% endset %}
 
     {% set blog_posts %}
-        {% for item in category.get_posts(args) %}
+        {% for item in items %}
             <div class="sidebar-post-feed-post">
 
                 {% if item.thumbnail %}
