Hide link if no link title

--- a/templates/module/cta_group.twig
+++ b/templates/module/cta_group.twig
@@ -50,7 +50,7 @@
                             {% endif %}
 
                         
-                            {% if cta.link %}
+                            {% if cta.link.title %}
                                 <a class="special special-right" href="{{cta.link.url}}" target="{{cta.link.target}}">{{cta.link.title}}</a>
                             {% endif %}
                         </div>
