--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -904,6 +904,10 @@ h2.post-title {
 .cta-group h2 {
     border-left-color: $tertiary;
 }
+.cta-group h3 {
+    hyphens: auto;
+    word-break: break-all;
+}
 .cta-group h3 a:link, .cta-group h3 a:visited, .cta-group h3 a:active, .cta-group h3 a:hover {
     color: inherit;
 }
