--- a/templates/module/document_list.twig
+++ b/templates/module/document_list.twig
@@ -1,6 +1,6 @@
 <div class="module document-list cta-group">
     <div class="container">
-    
+
         {% if module.heading %}
         <div class="row">
             <div class="col">
@@ -24,7 +24,7 @@
                                 {% set title = document.link.title %}
                                 {% set caption = document.caption %}
                                 {% set url = document.link.url %}
-                                {% set target = document.link.caption %}
+                                {% set target = document.link.target %}
                             {% endif %}
 
                             <h3>
