--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -1369,12 +1369,16 @@ h2.post-title {
 */
 
 .sidebar-post-feed-events h3 { margin-bottom: 15px; }
-.sidebar-post-feed-event {
+.sidebar-post-feed-events .ecs-event {
     border-bottom: 1px solid $asc_gray;
     margin-bottom: 15px;
     padding-bottom: 15px;
+    font-weight: normal;
 }
-.sidebar-post-feed-event:last-child {
+.ecs-event a:before {
+    display: none;
+}
+.sidebar-post-feed-events .ecs-event:last-child {
     border-bottom: none;
     margin-bottom: 0;
     padding-bottom: 0;
