--- a/templates/module/schools.twig
+++ b/templates/module/schools.twig
@@ -15,7 +15,7 @@
         <div class="card">
             <img alt="{{image.alt}}" class="card-img-top" src="{{image.src|resize(390, 220)}}">
             <div class="card-body">
-                <h3 class="card-title">{{school.heading}}</h3>
+                <h3 class="card-title"><a href="{{school.link.url}}" target="{{school.link.target}}">{{school.heading}}</a></h3>
                 <p class="card-text">{{school.copy}}</p>
                 <a class="special special-right" href="{{school.link.url}}" target="{{school.link.target}}">{{school.link.title}}</a>
             </div>
