--- a/templates/module/cta_pair.twig
+++ b/templates/module/cta_pair.twig
@@ -20,7 +20,17 @@
                 <div class="row no-gutters cta-content {{cta.image ? 'cta-content-with-image'}}">
                     <div class="{{cta.image ? 'col-10 offset-1' : 'col-12'}}">
                         {% if cta.heading %}
-                        <h3>{{cta.heading}}</h3>
+                            <h3>
+                                {% if cta.link %}
+                                    <a href="{{cta.link.url}}" target="{{cta.link.target}}">
+                                {% endif %}
+
+                                {{cta.heading}}
+
+                                {% if cta.link %}
+                                    </a>
+                                {% endif %}
+                            </h3>
                         {% endif %}
 
                         {% if cta.copy %}
