Reduce p margin-bottom

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -289,6 +289,9 @@ body {
 .main {
     margin-bottom: 40px;
 }
+.main p {
+    margin-bottom: 1rem;
+}
 .main ol a, .main p a, .main ul a {
     font-weight: bold;
 }
