Increase margin-bottom on image gallery

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -688,7 +688,8 @@ h2.post-title {
     .sidebar-module:nth-last-child(2) { margin-bottom: 60px; }
 }
 
-.sidebar-content .module { margin-bottom: 1.5rem; }
+.sidebar-content .module { margin-bottom: 2rem; }
+.sidebar-content .module.image-gallery { margin-bottom: 4rem; }
 .sidebar-content .module p:last-child { margin-bottom: 0; }
 .sidebar-content .module:last-child { margin-bottom: 0; }
 
