Adjust featured image columns

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -29,7 +29,7 @@
 
 			{% if post.thumbnail %}
 			<div class="row">
-				<div class="col-md-8 col-lg-5">
+				<div class="col-md-8">
 					<img class="post-thumbnail" src="{{post.thumbnail.src|resize(800, 500, 'center')}}">
 				</div>
 			</div>
