Use site.theme.link for hamburger icons

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -92,23 +92,23 @@
 											<div class="mobile-menu-button-container">
 												<a id="mobile-menu-button" href="#">
 													{% if 'Academy' in site.name %}
-														<img src="../wp-content/themes/ascension/img/academy_menu.svg">
+														<img src="{{site.theme.link}}/img/academy_menu.svg">
 													{% endif %}
 
 													{% if 'Ascension Catholic School' in site.name %}
-														<img src="../wp-content/themes/ascension/img/ascension_menu.svg">
+														<img src="{{site.theme.link}}/img/ascension_menu.svg">
 													{% endif %}
 
 													{% if 'Paul' in site.name %}
-														<img src="../wp-content/themes/ascension/img/jpII_menu.svg">
+														<img src="{{site.theme.link}}/img/jpII_menu.svg">
 													{% endif %}
 
 													{% if 'Church' in site.name %}
-														<img src="../wp-content/themes/ascension/img/parish_menu.svg">
+														<img src="{{site.theme.link}}/parish_menu.svg">
 													{% endif %}
 
 													{% if 'Claver' in site.name %}
-														<img src="../wp-content/themes/ascension/img/spc_menu.svg">
+														<img src="{{site.theme.link}}/img/spc_menu.svg">
 													{% endif %}
 												</a>
 											</div>
