Fix Parish hamburger src

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -104,7 +104,7 @@
 													{% endif %}
 
 													{% if 'Church' in site.name %}
-														<img src="{{site.theme.link}}/parish_menu.svg">
+														<img src="{{site.theme.link}}/img/parish_menu.svg">
 													{% endif %}
 
 													{% if 'Claver' in site.name %}
