--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -30,6 +30,10 @@ body {
   display: inline-block;
 }
 
+.mm-navbar .btn {
+  color: #fff !important;
+}
+
 .header-logo {
   margin: 20px 0 20px 30px;
 }
