--- a/templates/module/embed.twig
+++ b/templates/module/embed.twig
@@ -1,13 +1,34 @@
 <div class="module embed">
-    {% if module.heading %}
-    <h2>{{module.heading}}</h2>
-    {% endif %}
+	{% if module.heading %}
+		<h2>{{ module.heading }}</h2>
+	{% endif %}
 
-    <div class="embed-container">
-        {{module.embed}}
-    </div>
+	{% if module.embed_type == 'code' and module.code_snippet %}
+		{% set embed = module.code_snippet %}
+	{% else %}
+		{% set embed = module.embed %}
+	{% endif %}
 
-    <style>
-        .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-    </style>
+	<div class="embed-container">
+		{{ embed }}
+	</div>
+
+	<style>
+		.embed-container {
+			position: relative;
+			padding-bottom: 56.25%;
+			height: 0;
+			overflow: hidden;
+			max-width: 100%;
+		}
+		.embed-container iframe,
+		.embed-container object,
+		.embed-container embed {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+	</style>
 </div>
