Add Pascal mobile menu icon

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -104,6 +104,10 @@
 														<img src="{{site.theme.link}}/img/ascension_menu.svg">
 													{% endif %}
 
+													{% if 'Pascal' in site.name %}
+														<img src="{{site.theme.link}}/img/pascal_menu.svg">
+													{% endif %}
+
 													{% if 'Paul' in site.name %}
 														<img src="{{site.theme.link}}/img/jpII_menu.svg">
 													{% endif %}
