--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -14,8 +14,7 @@ body {
 * — Top Navigation —
 */
 
-#google_translate_element {
-}
+#google_translate_element {}
 
 #mobile-menu {
   display: none;
@@ -91,6 +90,7 @@ body {
 .navbar-secondary a:visited {
   color: #fff;
 }
+
 .navbar-secondary a:active,
 .navbar-secondary a:hover {
   opacity: 1;
@@ -100,6 +100,7 @@ body {
 .navbar-primary a:visited {
   color: $dark;
 }
+
 .navbar-primary a:active,
 .navbar-primary a:hover {
   opacity: 1 !important;
@@ -114,6 +115,7 @@ body {
   line-height: 1.75;
   padding: 15px 0;
 }
+
 .sub-menu ul {
   list-style: none;
   padding-left: 15px;
@@ -134,9 +136,11 @@ body {
 .sub-menu li a {
   color: inherit;
 }
+
 .sub-menu li a:hover {
   opacity: 0.5;
 }
+
 /*
 * — Primary Footer —
 */
@@ -150,14 +154,17 @@ body {
   padding-top: 30px;
   margin-bottom: 30px;
 }
+
 .footer a:link,
 .footer a:visited {
   color: inherit;
 }
+
 .footer a:active,
 .footer a:hover {
   opacity: 0.5;
 }
+
 .footer ul {
   font-size: 0.87rem;
   line-height: 1.1;
@@ -165,18 +172,23 @@ body {
   margin-bottom: 0;
   padding-left: 0;
 }
+
 .footer li {
   margin-bottom: 20px;
 }
+
 .footer li:last-child {
   margin-bottom: 0;
 }
+
 .footer .menu-item {
   font-weight: bold;
 }
+
 .footer-contact-social {
   font-style: italic;
 }
+
 .footer-contact-social a:before {
   color: $primary;
   display: inline-block;
@@ -188,24 +200,31 @@ body {
   margin-right: 10px;
   vertical-align: middle;
 }
+
 .footer-contact-social a[href*="facebook"]:before {
   content: "\f09a";
 }
+
 .footer-contact-social a[href*="instagram"]:before {
   content: "\f16d";
 }
+
 .footer-contact-social a[href*="linkedin"]:before {
   content: "\f08c";
 }
+
 .footer-contact-social a[href*="pinterest"]:before {
   content: "\f0d3";
 }
+
 .footer-contact-social a[href*="tumblr"]:before {
   content: "\f174";
 }
+
 .footer-contact-social a[href*="twitter"]:before {
   content: "\f081";
 }
+
 .footer-contact-social a[href*="youtube"]:before {
   content: "\f431";
 }
@@ -229,6 +248,7 @@ body {
     border-bottom: none;
     padding-bottom: 0;
   }
+
   .footer-newsletter,
   .footer-logo {
     margin-top: 95px;
@@ -241,9 +261,11 @@ body {
     margin-top: 0;
     padding-top: 30px;
   }
+
   .footer-newsletter input[type="submit"] {
     margin-top: 15px;
   }
+
   .footer-logo {
     margin-top: 15px;
   }
@@ -259,9 +281,12 @@ body {
 .footer-logo {
   text-align: center;
 }
+
 .footer-logo img {
+  margin-bottom: 20px;
   max-width: 100%;
 }
+
 @media (min-width: 768px) {
   .footer-logo {
     text-align: right;
@@ -281,6 +306,7 @@ body {
   padding: 15px 0;
   position: relative;
 }
+
 .footer-tertiary:before {
   background-color: $secondary;
   content: "";
@@ -289,6 +315,7 @@ body {
   top: -18px;
   width: 100%;
 }
+
 @media (min-width: 768px) {
   .footer-attribution {
     text-align: right;
@@ -311,42 +338,52 @@ body {
   padding-top: 30px;
   padding-bottom: 20px;
 }
+
 .title {
   font-size: 1.7rem;
   font-weight: bold;
   line-height: 1.2;
 }
+
 .main {
   margin-bottom: 40px;
 }
+
 .main p {
   margin-bottom: 1rem;
 }
+
 .main ol a,
 .main p a,
 .main ul a {
   font-weight: bold;
 }
+
 .main li {
   margin-bottom: 10px;
 }
+
 .main li:last-child {
   margin-bottom: 0;
 }
-.sidebar-content p + ol,
-.sidebar-content p + ul {
+
+.sidebar-content p+ol,
+.sidebar-content p+ul {
   margin-top: 0;
   margin-bottom: 1rem;
 }
+
 @media (min-width: 768px) {
   .title-band {
     margin-bottom: 40px;
     padding-top: 80px;
     padding-bottom: 40px;
   }
+
   .title {
     font-size: 2.25rem;
   }
+
   .main {
     margin-bottom: 110px;
   }
@@ -359,11 +396,13 @@ body {
 .sidebar-sidebar {
   margin-top: 40px;
 }
+
 @media (min-width: 768px) {
   .sidebar-sidebar {
     margin-top: 70px;
   }
 }
+
 @media (min-width: 992px) {
   .sidebar-sidebar {
     margin-top: 0;
@@ -376,39 +415,48 @@ body {
   line-height: 1.2;
   margin-bottom: 0;
 }
+
 .sidebar-module h3 {
   border-bottom: 1px solid $secondary;
   font-size: 1.3125rem;
   padding-bottom: 5px;
 }
+
 .sidebar-module h4 {
   font-size: 1.125rem;
 }
+
 .sidebar-module h3 a,
 .sidebar-module h4 a {
   color: inherit;
 }
+
 .sidebar-module ul {
   list-style: none;
   padding-left: 0;
   margin-bottom: 0;
 }
+
 .sidebar-module li {
   font-weight: bold;
   line-height: 1.25;
   margin-bottom: 20px;
 }
+
 .sidebar-module li:last-child {
   margin-bottom: 0;
 }
+
 .sidebar-module li a:link,
 .sidebar-module li a:visited {
   color: inherit;
 }
+
 .sidebar-module li a:active,
 .sidebar-module li a:hover {
   opacity: 0.5;
 }
+
 .sidebar-module li a:before {
   color: $secondary;
   content: "\f0da";
@@ -418,22 +466,27 @@ body {
   margin-right: 5px;
   vertical-align: middle;
 }
+
 .sidebar-copy {
   margin-bottom: 0 !important;
 }
+
 .sidebar-link {
   display: block;
   margin-top: 10px;
 }
+
 .sidebar-thumb {
   margin-bottom: 15px;
   max-width: 100%;
 }
+
 @media (min-width: 768px) {
   .sidebar-cta .sidebar-thumb {
     margin-bottom: 0;
   }
 }
+
 @media (min-width: 992px) {
   .sidebar-cta .sidebar-thumb {
     margin-bottom: 15px;
@@ -490,10 +543,12 @@ body {
   margin: 0 0 10px 0;
   padding: 0 0 3px 0;
 }
+
 .categories li {
   display: inline-block;
   margin-bottom: 0;
 }
+
 .categories a:link,
 .categories a:visited {
   color: inherit;
@@ -540,6 +595,7 @@ body {
   color: $primary;
   font-weight: bold;
 }
+
 .special-left:before,
 .special-right:after {
   color: $secondary;
@@ -549,10 +605,12 @@ body {
   line-height: 1;
   vertical-align: middle;
 }
+
 .special-left:before {
   content: "\f0d9";
   margin-right: 5px;
 }
+
 .special-right:after {
   content: "\f0da";
   margin-left: 5px;
@@ -574,19 +632,23 @@ img[class^="wp-image"] {
 .description {
   margin-bottom: 30px;
 }
+
 .board,
 .staff {
   margin-bottom: 30px;
 }
+
 .board:last-child,
 .staff:last-child {
   margin-bottom: 0;
 }
+
 .board img,
 .staff img {
   margin-bottom: 10px;
   max-width: 100%;
 }
+
 .board h3,
 .staff h3 {
   font-size: 1.125rem;
@@ -594,6 +656,7 @@ img[class^="wp-image"] {
   line-height: 1.2;
   margin-bottom: 5px;
 }
+
 .position {
   color: $asc_gray;
   font-size: 1.125rem;
@@ -601,19 +664,23 @@ img[class^="wp-image"] {
   line-height: 1.5;
   margin-bottom: 0;
 }
+
 .staff .contact {
   line-height: 1.7;
   list-style: none;
   margin-bottom: 10px;
   padding-left: 0;
 }
+
 .staff .contact li {
   display: inline;
 }
+
 .staff .contact li:nth-child(2):before {
   color: $secondary;
   content: "|";
 }
+
 .staff .contact a:link,
 .contact a:visited,
 .contact a:active,
@@ -621,9 +688,11 @@ img[class^="wp-image"] {
   color: $primary;
   font-weight: bold;
 }
+
 .staff .bio {
   margin-bottom: 0;
 }
+
 @media (min-width: 768px) {
   .description {
     margin-bottom: 40px;
@@ -651,9 +720,11 @@ img[class^="wp-image"] {
 .post {
   margin-bottom: 30px;
 }
+
 .post:last-child {
   margin-bottom: 0;
 }
+
 @media (min-width: 768px) {
   .post {
     margin-bottom: 40px;
@@ -668,18 +739,22 @@ img[class^="wp-image"] {
   margin-bottom: 10px;
   max-width: 100%;
 }
+
 h3.post-title {
   font-size: 1.3125rem;
   font-weight: bold;
   line-height: 1.2;
   margin-bottom: 10px;
 }
+
 h3.post-title a {
   color: inherit;
 }
+
 h3.post-title a:hover {
   opacity: 0.5;
 }
+
 .post-preview {
   margin-bottom: 10px;
 }
@@ -696,22 +771,27 @@ h3.post-title a:hover {
   margin: 0 0 20px 0;
   padding: 0;
 }
+
 .post-breadcrumbs li {
   display: inline-block;
   margin-bottom: 0;
 }
+
 .post-breadcrumbs li:after {
   content: " / ";
 }
+
 .post-breadcrumbs li:last-child:after {
   content: "";
 }
+
 .post-breadcrumbs a:link,
 .post-breadcrumbs a:visited,
 .post-breadcrumbs a:active,
 .post-breadcrumbs a:hover {
   color: inherit;
 }
+
 h2.post-title {
   border-bottom: 1px solid $secondary;
   font-size: 1.5rem;
@@ -720,15 +800,18 @@ h2.post-title {
   margin-bottom: 10px;
   padding-bottom: 4px;
 }
+
 .post-date {
   font-size: 0.875rem;
   font-style: italic;
   line-height: 1.1;
   margin-bottom: 10px;
 }
+
 .post-content :last-child {
   margin-bottom: 0;
 }
+
 @media (min-width: 768px) {
   h2.post-title {
     font-size: 2rem;
@@ -749,21 +832,26 @@ h2.post-title {
 .sidebar-module:last-child {
   margin-bottom: 0;
 }
+
 .module {
   margin-bottom: 40px;
 }
+
 .sidebar-module {
   margin-bottom: 60px;
 }
+
 @media (min-width: 768px) {
   .module {
     margin-bottom: 70px;
   }
 }
+
 @media (min-width: 992px) {
   .module {
     margin-bottom: 80px;
   }
+
   .sidebar-module:nth-last-child(2) {
     margin-bottom: 60px;
   }
@@ -772,12 +860,15 @@ h2.post-title {
 .sidebar-content .module {
   margin-bottom: 2rem;
 }
+
 .sidebar-content .module.image-gallery {
   margin-bottom: 4rem;
 }
+
 .sidebar-content .module p:last-child {
   margin-bottom: 0;
 }
+
 .sidebar-content .module:last-child {
   margin-bottom: 0;
 }
@@ -795,12 +886,14 @@ h2.post-title {
   margin-bottom: 25px;
   padding-left: 15px;
 }
+
 .page-template-custom-sidebar .module h2 {
   border-bottom: 1px solid $secondary;
   border-left: none !important;
   padding-bottom: 5px;
   padding-left: 0 !important;
 }
+
 .page-template-custom-sidebar .module h3 {
   font-size: 1.125rem;
   font-weight: bold;
@@ -874,11 +967,13 @@ h2.post-title {
     padding: 60px 120px;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
   }
+
   .cta-home h2 {
     font-size: 2rem;
     line-height: 1;
     margin-bottom: 20px;
   }
+
   .cta-home .cta-copy {
     font-size: 1.3rem;
     line-height: 1.6;
@@ -925,6 +1020,7 @@ h2.post-title {
     padding: 60px 120px;
     clip-path: polygon(0 0, 100% 0, 90% 100%, 0% 100%);
   }
+
   .cta-landing h2 {
     font-size: 2rem;
     line-height: 1;
@@ -946,45 +1042,56 @@ h2.post-title {
   background-color: $asc_lightest_gray;
   padding: 40px 0;
 }
+
 .page-template-custom-sidebar .cta-pair {
   margin-top: 80px;
 }
+
 .cta-pair h2 {
   border-left-color: $tertiary;
 }
+
 .cta-pair .cta:first-child {
   margin-bottom: 30px;
 }
+
 .cta-pair img {
   border-bottom: 6px solid $primary;
 }
+
 // For CTAs with images only...
 .cta-pair .cta-content-with-image {
   margin-top: -30px;
 }
+
 .cta-pair .cta-content div {
   background-color: $white;
   padding: 30px !important;
 }
+
 .cta-pair h3 {
   font-size: 1.3rem;
   font-weight: bold;
   line-height: 1.1;
   margin-bottom: 15px;
 }
+
 .cta-pair h3 a:link,
 .cta-pair h3 a:visited {
   color: inherit;
 }
+
 .cta-pair h3 a:active,
 .cta-pair h3 a:hover {
   opacity: 0.5;
 }
+
 .cta-pair p {
   font-size: 1rem;
   line-height: 1.5;
   margin-bottom: 20px;
 }
+
 @media (min-width: 768px) {
   .cta-pair .cta:last-child {
     margin-bottom: 0 !important;
@@ -1003,6 +1110,7 @@ h2.post-title {
     font-size: 1.125rem;
   }
 }
+
 @media (min-width: 992px) {
   .cta-pair .cta {
     margin-bottom: 0 !important;
@@ -1017,38 +1125,47 @@ h2.post-title {
   background-color: $asc_lightest_gray;
   padding: 40px 0;
 }
+
 .cta-group h2 {
   border-left-color: $tertiary;
 }
+
 .cta-group h3 a:link,
 .cta-group h3 a:visited,
 .cta-group h3 a:active,
 .cta-group h3 a:hover {
   color: inherit;
 }
+
 .cta-group h3 a:hover {
   opacity: 0.5;
 }
+
 .cta-group .cta {
   margin-bottom: 30px;
 }
+
 .cta-group .cta:last-child {
   margin-bottom: 0;
 }
+
 .cta-group .cta-content {
   margin-top: -15px;
   text-align: center;
 }
+
 .cta-group .cta-content div {
   background-color: $white;
   padding: 15px !important;
 }
+
 .cta-group h3 {
   font-size: 1.3rem;
   font-weight: bold;
   line-height: 1.1;
   margin-bottom: 15px;
 }
+
 .cta-group p {
   margin-bottom: 15px;
 }
@@ -1057,6 +1174,7 @@ h2.post-title {
   .cta-group .cta {
     margin-bottom: 70px;
   }
+
   .cta-group .cta:nth-last-child(2) {
     margin-bottom: 0;
   }
@@ -1075,20 +1193,24 @@ h2.post-title {
 .hero-landing {
   margin-bottom: 30px;
 }
+
 .hero img,
 .hero-landing img {
   clip-path: polygon(100% 0, 100% 90%, 0 100%, 0 0);
   max-width: 100%;
 }
+
 .hero img {
   margin-bottom: 20px;
 }
+
 .hero h1 {
   color: $primary;
   font-size: 1.7rem;
   line-height: 1.2;
   margin-bottom: 10px;
 }
+
 @media (min-width: 768px) {
   .hero img {
     margin-bottom: 50px;
@@ -1111,10 +1233,12 @@ h2.post-title {
 .image .figure {
   margin-bottom: 0;
 }
+
 .image .figure-image {
   height: auto;
   max-width: 100%;
 }
+
 .image .figure-caption {
   color: $asc_gray;
   font-size: 1rem;
@@ -1130,9 +1254,11 @@ h2.post-title {
 .image-band {
   clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
 }
+
 .image-band img {
   max-width: 100%;
 }
+
 .image-band-image-2 {
   display: none;
 }
@@ -1200,6 +1326,7 @@ h2.post-title {
 }
 
 @media (min-width: 768px) {
+
   .post-feed .post-feed-post-title,
   .post-feed .entry-title {
     font-size: 1.125rem;
@@ -1207,6 +1334,7 @@ h2.post-title {
 }
 
 @media (min-width: 992px) {
+
   .post-feed .post-feed-post-title,
   .post-feed .entry-title {
     font-size: 1.3125rem;
@@ -1221,24 +1349,30 @@ h2.post-title {
 .post-feed-posts h2 {
   border-left-color: $secondary;
 }
+
 .post-feed-posts .post-feed-item {
   margin-bottom: 30px;
 }
+
 .post-feed-posts .post-feed-item:last-child {
   margin-bottom: 0;
 }
+
 .post-feed-posts .post-feed-post-thumbnail {
   margin-bottom: 20px;
   max-width: 100%;
 }
+
 .post-feed-posts .post-feed-post-preview {
   margin-bottom: 15px !important;
 }
+
 @media (min-width: 768px) {
   .post-feed-posts .post-feed-post-thumbnail {
     margin-bottom: 0;
   }
 }
+
 @media (min-width: 992px) {
   .post-feed-posts .post-feed-post-thumbnail {
     margin-bottom: 20px;
@@ -1255,6 +1389,7 @@ h2.post-title {
   padding-top: 120px;
   padding-bottom: 40px;
 }
+
 .post-feed-events h2 {
   border-left-color: $white;
 }
@@ -1290,14 +1425,17 @@ h2.post-title {
   display: block;
   margin-bottom: 10px;
 }
+
 .ecs-excerpt {
   margin-bottom: 0 !important;
 }
+
 @media (min-width: 768px) {
   .post-feed .ecs-event {
     margin-bottom: 30px;
   }
 }
+
 @media (min-width: 992px) {
   .post-feed .ecs-event {
     margin-bottom: 0;
@@ -1344,6 +1482,7 @@ h2.post-title {
 .blurb {
   margin-bottom: 30px;
 }
+
 .blurb:last-child {
   margin-bottom: 0;
 }
@@ -1351,6 +1490,7 @@ h2.post-title {
 .blurb p {
   margin-bottom: 0.5rem;
 }
+
 .blurb p:last-child {
   margin-bottom: 0;
 }
@@ -1363,9 +1503,11 @@ h2.post-title {
   .overview {
     margin-bottom: 40px;
   }
+
   .overview h1 {
     font-size: 2.25rem;
   }
+
   .page-template-custom-portal-landing .overview {
     margin-top: 40px;
   }
@@ -1375,6 +1517,7 @@ h2.post-title {
   .overview-primary {
     margin-bottom: 0;
   }
+
   .blurb {
     margin-bottom: 30px;
   }
@@ -1405,19 +1548,24 @@ h2.post-title {
 .schools h2 {
   border-left-color: $secondary;
 }
+
 .schools .card {
   border: none;
   margin-bottom: 30px !important;
 }
+
 .schools .card:last-child {
   margin-bottom: 0 !important;
 }
+
 .schools .card-body {
   padding: 0 15px;
 }
+
 .schools img {
   margin-bottom: 20px;
 }
+
 .schools h3 {
   border-bottom: 2px solid $secondary;
   font-size: 1.125rem;
@@ -1426,17 +1574,21 @@ h2.post-title {
   margin-bottom: 10px;
   padding-bottom: 5px;
 }
+
 .schools h3 a:link,
 .schools h3 a:visited {
   color: inherit;
 }
+
 .schools h3 a:active,
 .schools h3 a:hover {
   opacity: 0.5;
 }
+
 .schools p {
   margin-bottom: 10px;
 }
+
 @media (min-width: 768px) {
   .schools .card {
     margin-bottom: 0 !important;
@@ -1465,17 +1617,17 @@ h2.post-title {
   margin-bottom: 15px !important;
 }
 
-.text h2 + h3,
-.text-landing h2 + h3 {
+.text h2+h3,
+.text-landing h2+h3 {
   margin-top: 0 !important;
 }
 
-.text ul + h2,
-.text-landing ul + h2,
-.text ol + h2,
-.text-landing ol + h2,
-.text p + h2,
-.text-landing p + h2 {
+.text ul+h2,
+.text-landing ul+h2,
+.text ol+h2,
+.text-landing ol+h2,
+.text p+h2,
+.text-landing p+h2 {
   margin-top: 40px !important;
 }
 
@@ -1500,9 +1652,11 @@ h2.post-title {
   .text-copy {
     width: 50%;
   }
+
   .text-additional-copy {
     columns: 2;
   }
+
   .text-additional-copy li {
     break-inside: avoid-column;
   }
@@ -1544,17 +1698,21 @@ h2.post-title {
 .sidebar-post-feed-posts h4 {
   margin-bottom: 10px;
 }
+
 .sidebar-post-feed-post h4 a:link,
 .sidebar-post-feed-post h4 a:visited {
   color: inherit;
 }
+
 .sidebar-post-feed-post h4 a:active,
 .sidebar-post-feed-post h4 a:hover {
   opacity: 0.5;
 }
+
 .sidebar-post-feed-post {
   margin-bottom: 30px;
 }
+
 .sidebar-post-feed-post:last-child {
   margin-bottom: 0;
 }
@@ -1566,28 +1724,34 @@ h2.post-title {
 .sidebar-post-feed-events h3 {
   margin-bottom: 15px;
 }
+
 .sidebar-post-feed-events li h4 a:link,
 .sidebar-post-feed-events li h4 a:visited {
   color: $asc_dark_gray !important;
 }
+
 .sidebar-post-feed-events li h4 a:active,
 .sidebar-post-feed-events li h4 a:hover {
   opacity: 0.5;
 }
+
 .sidebar-post-feed-events .ecs-event {
   border-bottom: 1px solid $asc_gray;
   margin-bottom: 15px;
   padding-bottom: 15px;
   font-weight: normal;
 }
+
 .ecs-event a:before {
   display: none;
 }
+
 .sidebar-post-feed-events .ecs-event:last-child {
   border-bottom: none;
   margin-bottom: 0;
   padding-bottom: 0;
 }
+
 .sidebar-post-feed-event-date {
   color: $asc_gray;
   display: block;
