--- a/templates/base.twig
+++ b/templates/base.twig
@@ -6,7 +6,10 @@
 	</head>
 {% endblock %}
 
-	<body class="{{body_class}}" data-template="base.twig">
+	<body class="{{ body_class }}" data-template="base.twig">
+	{% if options.gtag_body|length > 0 %}
+        {{ options.gtag_body }}
+    {% endif %}
 	<div id="page">
 		<nav id="mobile-menu">
 			<ul>
