--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -5,20 +5,25 @@
 <!--[if gt IE 8]><!--><html class="no-js" {{ site.language_attributes }}> <!--<![endif]-->
 <head>
     {% if options.ga|length > 0 %}
-        {{options.ga}}
+        {{ options.ga }}
     {% endif %}
+
+    {% if options.gtag_head|length > 0 %}
+        {{ options.gtag_head }}
+    {% endif %}
+
     <meta charset="{{ site.charset }}" />
-        <title>   
-            {% if wp_title %}
-                {{ wp_title }} - {{ site.name }}
-            {% else %}
-                {{ site.name }}
-            {% endif %}
-        </title>
+    <title>   
+        {% if wp_title %}
+            {{ wp_title }} - {{ site.name }}
+        {% else %}
+            {{ site.name }}
+        {% endif %}
+    </title>
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="{{ site.theme.link }}/style.css" type="text/css" media="screen" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="pingback" href="{{ site.pingback_url }}" />
-    {{function('wp_head')}}
+    {{ function('wp_head') }}
